--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mkdirp": "^0.3.5",
     "log-rotate": "^0.2.7",
     "async": "^0.6.2",
-    "csv-stringify": "0.0.2"
+    "csv-stringify": "0.0.2",
+    "csv-streamify": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.4",
