--- a/package.json
+++ b/package.json
@@ -14,11 +14,7 @@
     "type": "git",
     "url": "git://github.com/sparkfun/phant-stream-csv"
   },
-  "licenses": [
-    {
-      "type": "GPL v3"
-    }
-  ],
+  "license": "GPL-3.0",
   "dependencies": {
     "mkdirp": "^0.3.5",
     "log-rotate": "^0.2.7",
