rm -rf for stream clearing

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "log-rotate": "^0.2.7",
     "async": "^0.6.2",
     "csv-streamify": "^1.0.0",
-    "csv-string": "^2.1.1"
+    "csv-string": "^2.1.1",
+    "rimraf": "^2.2.6"
   },
   "devDependencies": {
     "grunt": "^0.4.4",
